Updated some of the associated documentation files.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
-Current maintainer:
+Current maintainers:
 
-	Andreas Kling
+	Andrew Strassburg
+	Adam Pippin
+	Jeff Clagg
 
 Originally written by:
 
@@ -10,6 +12,7 @@ Past maintainers:
 
 	Jessica Peterson
 	Roger Espel Llima
+	Andreas Kling
 
 Contributors:
 
